win32/freetds/include/sybdb.h

#define FALSE 0
#define TRUE  1
typedef int RETCODE;
typedef void DBSORTORDER;
/* copied from tds.h */
/* TODO find a best way... */
enum
{
	SYBCHAR = 47,		/* 0x2F */
#define SYBCHAR	SYBCHAR
	SYBVARCHAR = 39,	/* 0x27 */
#define SYBVARCHAR	SYBVARCHAR
	SYBINTN = 38,		/* 0x26 */
#define SYBINTN	SYBINTN
	SYBINT1 = 48,		/* 0x30 */
#define SYBINT1	SYBINT1
	SYBINT2 = 52,		/* 0x34 */
#define SYBINT2	SYBINT2
	SYBINT4 = 56,		/* 0x38 */
#define SYBINT4	SYBINT4
	SYBINT8 = 127,		/* 0x7F */
#define SYBINT8	SYBINT8
	SYBFLT8 = 62,		/* 0x3E */
#define SYBFLT8	SYBFLT8
	SYBDATETIME = 61,	/* 0x3D */
#define SYBDATETIME	SYBDATETIME
	SYBBIT = 50,		/* 0x32 */
#define SYBBIT	SYBBIT
	SYBTEXT = 35,		/* 0x23 */
#define SYBTEXT	SYBTEXT
	SYBIMAGE = 34,		/* 0x22 */
#define SYBIMAGE	SYBIMAGE
	SYBMONEY4 = 122,	/* 0x7A */
#define SYBMONEY4	SYBMONEY4
	SYBMONEY = 60,		/* 0x3C */
#define SYBMONEY	SYBMONEY
	SYBDATETIME4 = 58,	/* 0x3A */
#define SYBDATETIME4	SYBDATETIME4
	SYBREAL = 59,		/* 0x3B */
#define SYBREAL	SYBREAL
	SYBBINARY = 45,		/* 0x2D */
#define SYBBINARY	SYBBINARY
	SYBVOID = 31,		/* 0x1F */
#define SYBVOID	SYBVOID
	SYBVARBINARY = 37,	/* 0x25 */
#define SYBVARBINARY	SYBVARBINARY
	SYBNUMERIC = 108,	/* 0x6C */
#define SYBNUMERIC	SYBNUMERIC
	SYBDECIMAL = 106,	/* 0x6A */
#define SYBDECIMAL	SYBDECIMAL
	SYBFLTN = 109,		/* 0x6D */
#define SYBFLTN	SYBFLTN
	SYBMONEYN = 110,	/* 0x6E */
#define SYBMONEYN	SYBMONEYN
	SYBDATETIMN = 111	/* 0x6F */
#define SYBDATETIMN	SYBDATETIMN
};
typedef unsigned char DBBOOL;
typedef char DBCHAR;
typedef tds_sysdep_int16_type DBSMALLINT;
typedef tds_sysdep_int32_type DBINT;
typedef unsigned char DBBINARY;
typedef struct
{
	DBINT mnyhigh;
	unsigned tds_sysdep_int32_type mnylow;
} DBMONEY;
typedef struct
{
	DBINT mny4;
} DBMONEY4;
typedef struct tds_dblib_loginrec LOGINREC;
typedef unsigned char BYTE;
typedef struct tds_dblib_dbprocess DBPROCESS;
#define DBRPCRETURN 1
#define SUCCEED         1
#define FAIL            0
/* remote procedure call (rpc) options */
#define DBRPCRECOMPILE	TDS_STATIC_CAST(DBSMALLINT, 0x0001)
DBBOOL db12hour(DBPROCESS * dbprocess, const char language[]);
DBSORTORDER *dbloadsort(DBPROCESS * dbprocess);
RETCODE dbmnyndigit(DBPROCESS * dbproc, DBMONEY * mnyptr, DBCHAR * value, DBBOOL * zero);
RETCODE dbnpcreate(DBPROCESS * dbprocess);
int DBNUMORDERS(DBPROCESS * dbprocess);
RETCODE dbreginit(DBPROCESS * dbproc, DBCHAR * procedure_name, DBSMALLINT namelen);
RETCODE dbregnowatch(DBPROCESS * dbprocess, DBCHAR * procnm, DBSMALLINT namelen);
int dbstrsort(DBPROCESS * dbprocess, char *s1, int l1, char *s2, int l2, DBSORTORDER * sort);
RETCODE bcp_writefmt(DBPROCESS * dbproc, const char filename[]);
RETCODE dbaltutype(DBPROCESS * dbproc, int computeid, int column);
RETCODE dbbind(DBPROCESS * dbproc, int column, int vartype, DBINT varlen, BYTE * varaddr);
DBBOOL dbcharsetconv(DBPROCESS * dbprocess);
char *dbcolname(DBPROCESS * dbproc, int column);
#define DBDEAD(x) dbdead((x))
void dbexit(void);
char *dbgetchar(DBPROCESS * dbprocess, int n);
BYTE *dbgetuserdata(DBPROCESS * dbproc);
DBBOOL dbhasretstat(DBPROCESS * dbproc);
int dbiowdesc(DBPROCESS * dbproc);
RETCODE dbmnymaxpos(DBPROCESS * dbproc, DBMONEY * dest);
RETCODE dbmny4minus(DBPROCESS * dbproc, DBMONEY4 * src, DBMONEY4 * dest);
RETCODE dbmny4sub(DBPROCESS * dbproc, DBMONEY4 * m1, DBMONEY4 * m2, DBMONEY4 * diff);
RETCODE dbmnysub(DBPROCESS * dbproc, DBMONEY * m1, DBMONEY * m2, DBMONEY * diff);
RETCODE dbmnycopy(DBPROCESS * dbproc, DBMONEY * src, DBMONEY * dest);
char *dbname(DBPROCESS * dbproc);
int dbnumrets(DBPROCESS * dbproc);
BYTE *dbretdata(DBPROCESS * dbproc, int retnum);
int dbretlen(DBPROCESS * dbproc, int retnum);
char *dbretname(DBPROCESS * dbproc, int retnum);
DBINT dbretstatus(DBPROCESS * dbproc);
int dbrettype(DBPROCESS * dbproc, int retnum);
RETCODE dbrpcinit(DBPROCESS * dbproc, const char rpcname[], DBSMALLINT options);
RETCODE dbrpcparam(DBPROCESS * dbproc, const char paramname[], BYTE status, int type, DBINT maxlen, DBINT datalen, BYTE * value);
RETCODE dbrpcsend(DBPROCESS * dbproc);
RETCODE dbsafestr(DBPROCESS * dbproc, const char *src, DBINT srclen, char *dest, DBINT destlen, int quotetype);
RETCODE dbsetopt(DBPROCESS * dbproc, int option, const char *char_param, int int_param);
RETCODE dbsettime(int seconds);
RETCODE dbsqlexec(DBPROCESS * dbproc);
RETCODE dbsqlok(DBPROCESS * dbproc);
RETCODE dbsqlsend(DBPROCESS * dbproc);
int dbtds(DBPROCESS * dbprocess);
#define DBTDS(a)                dbtds(a)
DBBINARY *dbtxtimestamp(DBPROCESS * dbproc, int column);
RETCODE dbuse(DBPROCESS * dbproc, const char *name);
#define DBSETLHOST(x,y)		dbsetlname((x), (y), DBSETHOST)
#define DBSETLUSER(x,y)		dbsetlname((x), (y), DBSETUSER)
#define DBSETLPWD(x,y)		dbsetlname((x), (y), DBSETPWD)
#define DBSETLAPP(x,y)		dbsetlname((x), (y), DBSETAPP)
#define DBSETLCHARSET(x,y)	dbsetlname((x), (y), DBSETCHARSET)
RETCODE bcp_colfmt(DBPROCESS * dbproc, int host_column, int host_type, int host_prefixlen, DBINT host_collen,
		   const BYTE * host_term, int host_termlen, int colnum);
DBBOOL bcp_getl(LOGINREC * login);