sqlfront.pxd


    # Set maximum seconds db-lib waits for a server response to query.
    #
    #   Parameters:
    #     seconds   New limit for application.
    #
    #   Returns:
    #     SUCCEED always
    RETCODE dbsettime(int)

    # Send the SQL command to the server and wait for an answer.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #
    #   Return values:
    #     SUCCEED   query was processed without errors.
    #     FAIL      was returned by dbsqlsend() or dbsqlok()
    RETCODE dbsqlexec(DBPROCESS *) nogil

    # Wait for results of a query from the server.
    #   
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #
    #   Return values:
    #     SUCCEED   everything worked, fetch results with dbnextresults().
    #     FAIL      SQL syntax error, typically.
    RETCODE dbsqlok(DBPROCESS *) nogil

    # Get the TDS version in use for dbproc.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #
    #   Returns:
    #     a DBTDS* token.
    #
    #   Remarks:
    #     The integer values of the constants are counterintuitive.
    int dbtds(DBPROCESS *)

    # Change current database
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     name      database to use. 
    #
    #   Return values:
    #     SUCCEED query was processed without errors.
    #     FAIL    query was not processed
    RETCODE dbuse(DBPROCESS *, char *) nogil

    ## End Primary functions ##

    ## Remote Procedure functions ##
    # Determine if query generated a return status number
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #   Return values:
    #     TRUE      fetch return status with dbretstatus().
    #     FALSE     no return status
    DBBOOL dbhasretstat(DBPROCESS *)

    # Get count of output parameters filled by a stored procedure
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #   Returns:
    #     How many, possibly zero.
    int dbnumrets(DBPROCESS *)

    # Get value of an output parameter filled by a stored procedure.
    #
    #   Parameters:
    #     dbproc 	contains all information needed by db-lib to manage
    #               communications with the server.
    #     retnum    Nth parameter between 1 and the return value from
    #               dbnumrets()
    #   Returns:
    #     Address of a return parameter value, or NULL if no such retnum.
    BYTE * dbretdata(DBPROCESS *, int) nogil
    
    # Get size of an output parameter filled by a stored procedure. 
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     retnum    Nth parameter between 1 and the return value from
    #               dbnumrets()
    #   Returns:
    #     Size of a return parameter value, or NULL if no such retnum.
    int dbretlen(DBPROCESS *, int) nogil
    
    # Get name of an output parameter filled by a stored procedure. 
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     retnum    Nth parameter between 1 and the return value from
    #               dbnumrets()
    #   Returns:
    #     ASCII null-terminated string, NULL if no such retnum. 
    char * dbretname(DBPROCESS *, int) nogil
    
    # Fetch status value returned by query or remote procedure call.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #   Returns:
    #     The return value of the rpc call
    DBINT dbretstatus(DBPROCESS *) nogil
    
    # Get datatype of a stored procedure's return parameter.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     retnum    Nth parameter between 1 and the return value from
    #               dbnumrets()
    #   Returns:
    #     SYB* datatype token, or -1 if retnum is out of range.
    int dbrettype(DBPROCESS *, int) nogil
    
    # Initialize a remote procedure call.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     rpcname   name of the stored procedure to be run.
    #     options   Only supported option would be DBRPCRECOMPILE, which causes
    #               the stored procedure to be recompiled before executing.
    #   Return values:
    #     SUCCEED   normal
    #     FAIL      on error
    RETCODE dbrpcinit(DBPROCESS *, char *, DBSMALLINT) nogil
    
    # Add a parameter to a remote procedure call. 
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #     paramname literal name of the parameter, according to the stored
    #               procedure (starts with '@'). Optional. If not used,
    #               parameters will be passed in order instead of by name.
    #     status    must be DBRPCRETURN, if this parameter is a return
    #               parameter, else 0.
    #     type      datatype of the value parameter e.g. SYBINT4, SYBCHAR
    #     maxlen    Maximum output size of the parameter's value to be returned
    #               by the stored procedure, usually the size of your host
    #               variable. Fixed-length datatypes take -1 (NULL or not).
    #               Non-OUTPUT parameters also use -1. Use 0 to send a NULL
    #               value for a variable length datatype.
    #     datalen   For variable-length datatypes, the byte size of the data
    #               to be sent, exclusive of any null terminator. For
    #               fixed-length datatypes use -1. To send a NULL value, use 0.
    #     value     Address of your host variable.
    #
    #   Return values:
    #     SUCCEED   normal
    #     FAIL      on error
    RETCODE dbrpcparam(DBPROCESS *, char *, BYTE, int, DBINT, DBINT, BYTE *) nogil
    
    # Execute the procedure and free associated memory.
    #
    #   Parameters:
    #     dbproc    contains all information needed by db-lib to manage
    #               communications with the server.
    #   Return values:
    #     SUCCEED   normal
    #     FAIL      on error
    RETCODE dbrpcsend(DBPROCESS *) nogil
    ## End Remote Procedure functions ##

    # TODO:
    char * dbname(DBPROCESS *)
    void dbexit()
    
    DBBOOL DBDEAD(DBPROCESS *)
    RETCODE DBSETLAPP(LOGINREC *x, char *y)
    RETCODE DBSETLHOST(LOGINREC *x, char *y)
    RETCODE DBSETLPWD(LOGINREC *x, char *y)
    RETCODE DBSETLUSER(LOGINREC *x, char *y)
    RETCODE DBSETLCHARSET(LOGINREC *x, char *y)
    
    BYTE * dbgetuserdata(DBPROCESS *)
#	complex double __builtin_csinh(complex double)
    int DBNUMORDERS(DBPROCESS *)
#	complex long double __builtin_csinl(complex long double)
    DBBOOL bcp_getl(LOGINREC *)
#	complex float __builtin_csinf(complex float)
    RETCODE dbmny4minus(DBPROCESS *, DBMONEY4 *, DBMONEY4 *)
#	complex float __builtin_cpowf(complex float, complex float)
    ctypedef void DBSORTORDER
    DBSORTORDER * dbloadsort(DBPROCESS *)
    RETCODE dbreginit(DBPROCESS *, DBCHAR *, DBSMALLINT)
#	complex long double __builtin_ccosl(complex long double)
#	complex double __builtin_ccosh(complex double)
    DBBOOL db12hour(DBPROCESS *, char *)
#	complex float __builtin_ccosf(complex float)
    RETCODE dbregnowatch(DBPROCESS *, DBCHAR *, DBSMALLINT)
    RETCODE dbbind(DBPROCESS *, int, int, DBINT, BYTE *)
    int dbiowdesc(DBPROCESS *)
    RETCODE dbmnyndigit(DBPROCESS *, DBMONEY *, DBCHAR *, DBBOOL *)
    RETCODE bcp_colfmt(DBPROCESS *, int, int, int, DBINT, BYTE *, int, int)
    RETCODE bcp_writefmt(DBPROCESS *, char *)
    RETCODE dbsafestr(DBPROCESS *, char *, DBINT, char *, DBINT, int)
    float __builtin_fabsf(float)
    DBBINARY * dbtxtimestamp(DBPROCESS *, int)
    long double __builtin_fabsl(long double)
    RETCODE dbmny4sub(DBPROCESS *, DBMONEY4 *, DBMONEY4 *, DBMONEY4 *)
    RETCODE dbmnymaxpos(DBPROCESS *, DBMONEY *)
    RETCODE dbnpcreate(DBPROCESS *)
    RETCODE dbaltutype(DBPROCESS *, int, int)
    DBBOOL dbcharsetconv(DBPROCESS *)
    RETCODE dbmnysub(DBPROCESS *, DBMONEY *, DBMONEY *, DBMONEY *)

    RETCODE dbmnycopy(DBPROCESS *, DBMONEY *, DBMONEY *)
    RETCODE dbsetopt(DBPROCESS *, int, char *, int)
    char * dbcolname(DBPROCESS *, int)
    bool __builtin_isinf()
#	complex long double __builtin_cexpl(complex long double)
    char * dbgetchar(DBPROCESS *, int)
    int dbstrsort(DBPROCESS *, char *, int, char *, int, DBSORTORDER *)
#	complex float __builtin_cexpf(complex float)
